--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,21 @@
-<h2>Hello</h2>
+<div class="container">
+
+    <h3 class="d-flex justify-content-center">Angular web demo, sql server demo</h3>
+    <h5 class="d-flex justify-content-center">Photocard Collection</h5>
+
+    <nav class="navbar navbar-expand-sm bg-light navbar-dark">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <button routerLink="idolGroup"
+          class="m-1 btn btn-light btn-outline-primary" button>Groups</button>
+        </li>
+
+        <li class="nav-item">
+          <button routerLink="idolCard"
+          class="m-1 btn btn-light btn-outline-primary" button>PhotoCards</button>
+        </li>
+      </ul>
+    </nav>
+</div>
 
 <router-outlet></router-outlet>
