--- a/src/app/IdolGroup/show-group/show-group.component.html
+++ b/src/app/IdolGroup/show-group/show-group.component.html
@@ -1,1 +1,23 @@
-<p>show-group works!</p>
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th>GroupID</th>
+      <th>Group Name</th>
+      <th>Options</th>
+    </tr>
+    <tbody>
+      <tr *ngFor="let dataItem of GroupList">
+        <td>{{dataItem.GroupId}}</td>
+        <td>{{dataItem.GroupName}}</td>
+        <td>
+          <button type="button" class="btn btn-light mr-1">
+            Edit
+          </button>
+          <button type="button" class="btn btn-light mr-1">
+            Delete
+          </button>
+        </td>
+      </tr>
+    </tbody>
+  </thead>
+</table>
