--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,8 @@
 <div class="container">
 
-    <h3 class="d-flex justify-content-center">Angular web demo, sql server demo</h3>
     <h5 class="d-flex justify-content-center">Photocard Collection</h5>
 
-    <nav class="navbar navbar-expand-sm bg-light navbar-dark">
+    <nav class="navbar navbar-expand-sm bg-light navbar-dark justify-content-center">
       <ul class="navbar-nav">
         <li class="nav-item">
           <button routerLink="idolGroup"
