--- a/src/app/IdolGroup/show-group/show-group.component.html
+++ b/src/app/IdolGroup/show-group/show-group.component.html
@@ -1,3 +1,35 @@
+<!-- Button trigger modal -->
+<!-- NOTE: data-backdrop/data-keyboard attributes prevent users from clicking outside the modal to close it. -->
+<button type="button" class="btn btn-primary float-right m-2" 
+data-toggle="modal" data-target="#exampleModal"
+(click)="addClick()"
+data-backdrop="static" data-keyboard="false"
+>
+  Add Idol Group
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">{{ModalTitle}}</h5>
+        <button type="button" class="close" 
+        data-dismiss="modal" aria-label="Close"
+        (click)="closeClick()"
+        >
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <app-add-edit-group [group]="group" *ngIf="ActivateAddEditGroupComp">
+
+        </app-add-edit-group>
+      </div>
+    </div>
+  </div>
+</div>
+
 <table class="table table-striped">
   <thead>
     <tr>
@@ -11,7 +43,11 @@
       <td>{{dataItem.GroupId}}</td>
       <td>{{dataItem.GroupName}}</td>
       <td>
-        <button type="button" class="btn btn-light mr-1">
+        <button type="button" class="btn btn-light mr-1"
+        data-toggle="modal" data-target="#exampleModal"
+        (click)="editClick(dataItem)"
+        data-backdrop="static" data-keyboard="false"
+        >
           Edit
         </button>
         <button type="button" class="btn btn-light mr-1">
