--- a/src/app/IdolGroup/add-edit-group/add-edit-group.component.html
+++ b/src/app/IdolGroup/add-edit-group/add-edit-group.component.html
@@ -1,1 +1,15 @@
-<p>add-edit-group works!</p>
+<div class="form-group row">
+
+  <label class="col-sm-2 col-form-label">Group Name</label>
+  <div class="col-sm-10">
+    <input type="text" class="form-control" [(ngModel)]="GroupName" placeholder="Enter Group Name">
+  </div>
+</div>
+
+<button (click)="addGroup()" *ngIf="group.GroupId==0" class="btn btn-primary">
+  Add
+</button>
+
+<button (click)="updateGroup()" *ngIf="group.GroupId!=0" class="btn btn-primary">
+  Update
+</button>
