--- a/src/app/IdolGroup/show-group/show-group.component.html
+++ b/src/app/IdolGroup/show-group/show-group.component.html
@@ -49,7 +49,9 @@ data-backdrop="static" data-keyboard="false"
         >
           Edit
         </button>
-        <button type="button" class="btn btn-light mr-1">
+        <button type="button" class="btn btn-light mr-1"
+        (click)="deleteClick(groupInfo.GroupId)"
+        >
           Delete
         </button>
       </td>
