add html to show-card-compnent

--- a/src/app/IdolCard/show-card/show-card.component.html
+++ b/src/app/IdolCard/show-card/show-card.component.html
@@ -1,1 +1,66 @@
-<p>show-card works!</p>
+<!-- Button trigger modal -->
+<!-- NOTE: data-backdrop/data-keyboard attributes prevent users from clicking outside the modal to close it. -->
+<button type="button" class="btn btn-primary float-right m-2" 
+data-toggle="modal" data-target="#exampleModal"
+(click)="addClick()"
+data-backdrop="static" data-keyboard="false"
+>
+  Add Idol Group
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">{{ModalTitle}}</h5>
+        <button type="button" class="close" 
+        data-dismiss="modal" aria-label="Close"
+        (click)="closeClick()"
+        >
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <app-add-edit-card [card]="card" *ngIf="ActivateAddEditCardComp">
+        </app-add-edit-card>
+      </div>
+    </div>
+  </div>
+</div>
+
+<table class="table table-striped">
+  <thead>
+    <tr>
+      <th>CardID</th>
+      <th>Name</th>
+      <th>Group</th>
+      <th>PhotoCard Set</th>
+      <th>Date Added</th>
+      <th>Options</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let cardInfo of GroupList">
+      <td>{{cardInfo.IdolId}}</td>
+      <td>{{cardInfo.IdolName}}</td>
+      <td>{{cardInfo.IdolGroup}}</td>
+      <td>{{cardInfo.PhotoCardSet}}</td>
+      <td>{{cardInfo.DateAdded}}</td>
+      <td>
+        <button type="button" class="btn btn-light mr-1"
+        data-toggle="modal" data-target="#exampleModal"
+        (click)="editClick(cardInfo)"
+        data-backdrop="static" data-keyboard="false"
+        >
+          Edit
+        </button>
+        <button type="button" class="btn btn-light mr-1"
+        (click)="deleteClick(cardInfo.IdolId)"
+        >
+          Delete
+        </button>
+      </td>
+    </tr>
+  </tbody>
+</table>
