added logic to show-card-component

--- a/src/app/IdolCard/show-card/show-card.component.html
+++ b/src/app/IdolCard/show-card/show-card.component.html
@@ -41,7 +41,7 @@ data-backdrop="static" data-keyboard="false"
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let cardInfo of GroupList">
+    <tr *ngFor="let cardInfo of CardList">
       <td>{{cardInfo.IdolId}}</td>
       <td>{{cardInfo.IdolName}}</td>
       <td>{{cardInfo.IdolGroup}}</td>
