--- a/src/app/IdolCard/add-edit-card/add-edit-card.component.html
+++ b/src/app/IdolCard/add-edit-card/add-edit-card.component.html
@@ -19,6 +19,12 @@
       </select>
     </div>
 
+    <label class="col-sm-2 col-form-label">PhotoCardSet</label>
+    <div class="col-sm-10">
+      <input type="text" class="form-control" [(ngModel)]="PhotoCardSet" 
+      placeholder="What set is this card from? Leave blank if unknown.">
+    </div>
+
   </div>
   <!-- file upload -->
   <div class="ml-3 bd-highlight" style="width: 40%;">
@@ -30,10 +36,10 @@
 </div>
 
 <!-- Add/Update buttons -->
-<button (click)="addGroup()" *ngIf="group.GroupId==0" class="btn btn-primary">
+<button (click)="addCard()" *ngIf="card.IdolId==0" class="btn btn-primary">
   Add
 </button>
 
-<button (click)="updateGroup()" *ngIf="group.GroupId!=0" class="btn btn-primary">
+<button (click)="updateCard()" *ngIf="card.IdolId!=0" class="btn btn-primary">
   Update
 </button>
