--- a/src/app/IdolCard/show-card/show-card.component.html
+++ b/src/app/IdolCard/show-card/show-card.component.html
@@ -5,7 +5,7 @@ data-toggle="modal" data-target="#exampleModal"
 (click)="addClick()"
 data-backdrop="static" data-keyboard="false"
 >
-  Add Idol Group
+  Add a Card
 </button>
 
 <!-- Modal -->
