--- a/src/app/IdolGroup/show-group/show-group.component.html
+++ b/src/app/IdolGroup/show-group/show-group.component.html
@@ -44,13 +44,13 @@ data-backdrop="static" data-keyboard="false"
           (keyup)="filterGroups()" placeholder="Filter">
         </div> -->
 
-        GroupID
+        ID
       </th>
       <th>
         <!-- Filter by Name -->
         <div class="d-flex flex-row">
           <input [(ngModel)]="GroupNameFilter" class="form-control"
-          (keyup)="filterGroups()" placeholder="Filter">
+          (keyup)="filterGroups()" placeholder="Search by Group Name">
         </div>
 
         Group Name
